--- a/overlays/stage/kustomization.yaml
+++ b/overlays/stage/kustomization.yaml
@@ -1,12 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-patches:
-- path: deployment.yaml
-
-resources:
+bases:
 - ../../base
-
-images:
-- name: xxx
-  newTag: release-10577
+patchesJson6902:
+  - target:
+      version: apps/v1
+      kind: Deployment
+      name: deployment.yaml
+    patch: |-
+      - op: replace
+        path: /spec/template/spec/containers/0/image
+        value: release-10577
